# humanist

./: .gitignore  Cargo.toml  README.md  benchmark_spec.md  flake.nix  project_humanist.md  project_spatial_os.md
.github/workflows/: ci.yml  release.yml
benchmarks/: Cargo.toml  run_gui_benchmark.sh  verify_benchmarks.sh
benchmarks/src/: analyze.rs  bench_eventbus.rs  bench_frontend.rs  bench_memory.rs  bench_prolog.rs  bench_saturation.rs  bench_scaling.rs  config.rs  dataset.rs  main.rs  stats.rs
core_engine/: Cargo.toml  build.rs
core_engine/proto/: events.proto
core_engine/src/: blob.rs  bus.rs  db.rs  formats.rs  gc.rs  lib.rs  logging.rs  models.rs  ports.rs  snapshot.rs
os_cli/: Cargo.toml
os_cli/src/: main.rs
os_gui/: index.html  package-lock.json  package.json  vite.config.ts
os_gui/src/: App.css  App.tsx  config.ts  models.ts  store.ts
os_gui/src-tauri/: Cargo.toml  tauri.conf.json
os_gui/src-tauri/capabilities/: default.json
os_gui/src-tauri/src/: bench.rs  lib.rs  main.rs  pty_manager.rs
os_gui/src/benchmark/: SyncBenchmark.ts
os_gui/src/components/: ActivityBar.tsx  AssetPreview.tsx  CalendarView.tsx  CausalPanel.tsx  CommandPalette.tsx  CreateEntityDialog.tsx  DataTablePanel.tsx  DraggablePane.tsx  EditionPanel.tsx  EditionSidePanel.tsx  EntityInspector.tsx  EntityKnowledgePanel.tsx  EntityPanel.tsx  EntityRegistry.tsx  ErrorBoundary.tsx  GlobePanel.tsx  GraphPanel.tsx  GraphSidePanel.tsx  IngestDialog.tsx  InputsPanel.tsx  InputsSidePanel.tsx  OntologyPanel.tsx  OutputsPanel.tsx  OutputsSidePanel.tsx  PdfViewer.tsx  PtyCanvas.tsx  RelateDialog.tsx  RelationPanel.tsx  RulesPanel.tsx  SearchableDropdown.tsx  SettingsPanel.tsx  SidePanel.tsx  StoreStatePanel.tsx  TerminalPanel.tsx  TerminalSidePanel.tsx  ThemedSelect.tsx  ThreeViewer.tsx  TilingLayout.tsx  TimelinePanel.tsx  TimelineView.tsx  (+1 more)
os_gui/src/lib/: log.ts  prolog-mode.ts
os_gui/src/utils/: graphUtils.ts
prolog_engine/: Cargo.toml
prolog_engine/src/: io.rs  lib.rs  rules.rs  schema.rs  synchronizer.rs
spec/: schema.json
