[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spatial-os-bench"
path = "src/main.rs"

[dependencies]
core_engine = { path = "../core_engine" }
prolog_engine = { path = "../prolog_engine" }
tokio = { version = "1", features = ["full"] }
ulid = "1"
rand = { version = "0.8", features = ["std_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
clap = { version = "4", features = ["derive"] }
