[package]
name = "core_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ulid = "1.1"
async-trait = "0.1"
surrealdb = { version = "2.2", features = ["kv-surrealkv"] }
aws-config = { version = "1.5.17", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.77.2"
tokio = { version = "1.43", features = ["full", "sync", "time"] }
tonic = "0.12.3"
prost = "0.13.4"
futures = "0.3.31"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
[build-dependencies]
tonic-build = "0.12.3"
