[package]
name = "os_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
core_engine = { path = "../core_engine" }
tokio = { version = "1", features = ["full"] }
ulid = "1.1"
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.10"
prolog_engine = { path = "../prolog_engine" }
